# homework_27

./: README.md  pyproject.toml
ads/: models.py  views.py
ads/migrations/: 0001_initial.py  0002_ad_description_alter_ad_address_alter_ad_name_and_more.py
datasets/: ads.json  csv_to_json.py
homework_27/: settings.py  urls.py
