[tool.poetry]
name = "homework_27"
version = "0.1.0"
description = ""
authors = ["Кристина Ратник <kristi.2001@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
